--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="imagex/png" href="../assets/imgs/wga_ico.ico">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="../css/about.css" />
-    <link rel="stylesheet" type="text/css" href="../css/degree.css" />
-    <link rel="stylesheet" type="text/css" href="../css/projects.css" />
-    <link rel="stylesheet" type="text/css" href="../css/contact.css" />
+    <link rel="shortcut icon" type="imagex/png" href="./docs/assets/imgs/wga_ico.ico">
+    <link rel="stylesheet" type="text/css" href="./docs/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./docs/css/about.css" />
+    <link rel="stylesheet" type="text/css" href="./docs/css/degree.css" />
+    <link rel="stylesheet" type="text/css" href="./docs/css/projects.css" />
+    <link rel="stylesheet" type="text/css" href="./docs/css/contact.css" />
     <title>Willian Garcia - Portfolio</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
         <a href="#" id="home" class="logo">
           <span>WGA</span>
         </a>
-        <img src="../assets/imgs/menu_icon.png" alt="menu" id="menu-icon">
+        <img src="./docs/assets/imgs/menu_icon.png" alt="menu" id="menu-icon">
         <nav class="navbar">
           <a href="#about">Sobre</a>
           <a href="#degree">Formação</a>
@@ -34,10 +34,10 @@
           </p>
           <div class="social-icons">
             <a href="https://github.com/Willian-Garcia" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/imgs/github_icon.png" alt="" class="icon">
+                <img src="./docs/assets/imgs/github_icon.png" alt="" class="icon">
             </a>
             <a href="https://www.linkedin.com/in/willian-garcia-6b0892123/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/imgs/linkedin_icon.png" alt="" class="icon">
+                <img src="./docs/assets/imgs/linkedin_icon.png" alt="" class="icon">
             </a>
         </div>        
           <div class="btn-group">
@@ -46,12 +46,12 @@
           </div>
         </div>
         <div class="home-image">
-          <img src="../assets/imgs/Willian.png" alt="" />
+          <img src="./docs/assets/imgs/Willian.png" alt="" />
         </div>
       </section>
       <section class="about" id="about">
         <div class="about-image">
-          <img src="../assets/imgs/Willian.png" alt="" />
+          <img src="./docs/assets/imgs/Willian.png" alt="" />
         </div>
         <div class="about-content">
           <h1><span>Sobre mim</span></h1>
@@ -120,7 +120,7 @@
         <div class="project-container">
           <div class="project-box">
             <div class="project-info">
-              <img src="./assets/imgs/NutriPerry_screens.JPG" alt="">
+              <img src="./docs/assets/imgs/NutriPerry_screens.JPG" alt="">
               <h3>NutriPerry</h3>
               <p>4° Semestre</p>
               <div class="project-content">
@@ -141,7 +141,7 @@
           </div>
           <div class="project-box">
             <div class="project-info">
-              <img src="./assets/imgs/Visiona Dark Dashboard Main.png" alt="">
+              <img src="./docs/assets/imgs/Visiona Dark Dashboard Main.png" alt="">
               <h3>Visiona Dashboard</h3>
               <p>3° Semestre</p>
               <div class="project-content">
@@ -163,7 +163,7 @@
         <div class="project-container">
           <div class="project-box">
             <div class="project-info">
-              <img src="./assets/imgs/gif_figma_bike_pass.gif" alt="">
+              <img src="./docs/assets/imgs/gif_figma_bike_pass.gif" alt="">
               <h3>Bikepass</h3>
               <p>2° Semestre</p>
               <div class="project-content">
@@ -183,7 +183,7 @@
           </div>
           <div class="project-box">
             <div class="project-info">
-              <img src="./assets/imgs/gif_projeto_1.gif" alt="">
+              <img src="./docs/assets/imgs/gif_projeto_1.gif" alt="">
               <h3>Site Institucional</h3>
               <p>1° Semestre</p>
               <div class="project-content">
@@ -214,10 +214,10 @@
             </div>
             <div class="social-icons">
               <a href="https://github.com/Willian-Garcia" target="_blank" rel="noopener noreferrer">
-                  <img src="./assets/imgs/github_icon.png" alt="" class="icon">
+                  <img src="./docs/assets/imgs/github_icon.png" alt="" class="icon">
               </a>
               <a href="https://www.linkedin.com/in/willian-garcia-6b0892123/" target="_blank" rel="noopener noreferrer">
-                  <img src="./assets/imgs/linkedin_icon.png" alt="" class="icon">
+                  <img src="./docs/assets/imgs/linkedin_icon.png" alt="" class="icon">
               </a>
           </div> 
           </div>
@@ -225,6 +225,6 @@
       </section>
     </div>
   </body>
-  <script src="./assets/script.js"></script>
+  <script src="./docs/assets/script.js"></script>
 </html>
 
